<resources>
    <string name="app_name">Point of Distribution Reporting</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="mobile_number">Mobile number</string>
    <string name="agent">Agent</string>
    <string name="company">Company</string>
    <string name="already_have_account">Already have account?</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="via_sms">Via sms</string>
    <string name="via_email">Via email</string>
    <string name="forgot_your">FORGOT YOUR</string>
    <string name="password">PASSWORD</string>
    <string name="select_which_contact_details_should_we_use_to_reset_your_password">select which contact details should we use to reset your password</string>
    <string name="select_which_contact_details_should_we_use_to">select which contact details should we use to</string>
    <string name="reset_your_password">reset your password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="New">New</string>
    <string name="Active">Active</string>
    <string name="History">History</string>
    <string name="publication_type">Publication type</string>
    <string name="submit">SUBMIT</string>
    <string name="weight">Weight</string>
    <string name="quantity">Quantity</string>
    <string name="city">City</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="item_size">Item Size</string>
    <string name="view">View</string>
    <string name="Agents">Agents</string>
    <string name="new_pod_order">New POD Order</string>
    <string name="pod_history">POD History</string>
    <string name="active_orders">Active Orders</string>
    <string name="product_history">Product History</string>
    <string name="reset">Reset</string>
    <string name="pod">POD</string>
    <string name="packaging">Packaging</string>
    <string name="personnel">Personnel</string>
    <string name="delivery">Delivery</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="help">Help</string>
    <string name="save">Save</string>
    <string name="modify_pod_order">Modify POD Order</string>
    <string name="new_product">New Product</string>
    <string name="product_type">Product Type</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="number_of_distributors">Number Of Distributors</string>
    <string name="modify_products">Modify Products</string>
    <string name="view_product">View Product</string>
    <string name="name">Name</string>
    <string name="setup_date">Setup Date</string>
    <string name="check_quantity">Check Quantity</string>
    <string name="item_photo">Item Photo</string>
    <string name="Personnel">Personnel</string>
    <string name="info">Info</string>
    <string name="agent_info">Agent Info</string>
    <string name="user_name">User Name</string>
    <string name="agent_information">Agent Information</string>
    <string name="agent_name">Agent Name</string>
    <string name="ayman">Ayman</string>
    <string name="phone_number">Phone Number</string>
    <string name="subject">Subject</string>
    <string name="note">Note</string>
    <string name="agent_location">Agent Location</string>
    <string name="title_activity_maps">title_activity_maps</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="from_location">From Location</string>
    <string name="to_location">To location</string>
    <string name="new_delivery">New Delivery</string>
    <string name="active_delivery">Active delivery</string>
    <string name="modify_delivery">Modify delivery</string>
    <string name="search">Search</string>
    <string name="message">Message</string>
    <string name="product">Product</string>
    <string name="your_changes_has_been_saved">Your changes has been saved</string>
    <string name="ok">OK</string>
    <string name="your_order_has_been_placed">Your order has been placed</string>
    <string name="thank_you">Thank You</string>
    <string name="we_will_contact_you_soon">We will contact you soon</string>
    <string name="point_of_distribution">POINT OF DISTRIBUTION</string>
    <string name="reporting_application">REPORTING APPLICATION</string>
    <string name="no">No :</string>
    <string name="_21_05_2019">21/05/2019</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="view_order">View Order</string>
    <string name="product_name">Product Name :</string>
    <string name="status">Status</string>
    <string name="distributer_name">Distributer Name</string>
    <string name="distributed">Distributed</string>
    <string name="finishing_distributing">Finishing Distributing</string>
    <string name="last_visits">Last Visits</string>
    <string name="active_product">Active Product</string>
    <string name="view_delivery">View Delivery</string>
    <string name="arriving_in">Arriving in</string>
    <string name="current_location">Current Location</string>
    <string name="delivery_history">Delivery History</string>
    <string name="date">Date</string>
    <string name="view_old_delivery">View Old Delivery</string>
    <string name="phone_number">Phone Number</string>
</resources>
