<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.personnel.AgentInformationFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agent_information"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_add_circle_blue_24dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agent_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edite_text_strok"
        android:hint="@string/ayman"
        android:gravity="center_horizontal"
        android:paddingTop="5dp"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edite_text_strok"
        android:hint="0123456789"
        android:gravity="center_horizontal"
        android:paddingTop="5dp"
        android:textSize="14sp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        android:background="@drawable/ic_launcher_background" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject"
        android:padding="5dp"
        android:textSize="14sp"
        android:background="@drawable/edite_text_strok"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:background="@drawable/edite_text_strok"
        android:hint="@string/note"
        android:padding="5dp"
        android:textSize="14sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/field_design_blue"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:textSize="12sp"
        android:layout_marginTop="20dp"
        android:text="@string/agent_location"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp">

        <fragment
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:id="@+id/frg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </FrameLayout>

    </LinearLayout>


</ScrollView>