<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:alpha="0.8"
    android:background="@color/yellow"
    android:layout_height="150dp">

    <TextView
        android:id="@+id/txt_help_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thank_you"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/txt2_help_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/we_will_contact_you_soon"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/BTN_help"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:background="@drawable/field_design_black"
        android:text="@string/ok"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp" />
</LinearLayout>