<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.product.ViewProductFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_product"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:drawablePadding="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/tab_circle_yellow"
            android:drawableStart="@drawable/tab_circle_yellow"
            android:layout_marginStart="10dp"
            tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="40dp"
        android:layout_marginStart="5dp"
        android:paddingStart="5dp"
        android:orientation="horizontal"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/txt_name_view_product"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/txt_itemSize_view_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/yellow"
            android:text="@string/item_size"/>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="5dp"
            android:paddingStart="5dp"
            android:layout_marginTop="10dp"
            android:weightSum="2"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/value_txt_name_view_product"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/value_txt_itemSize_view_product"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text=""/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:paddingStart="5dp"
            android:layout_marginStart="5dp"
            android:weightSum="2"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/txt_weight_view_product"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="@color/yellow"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/txt_setupDate_view_product"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/setup_date"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/yellow"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:paddingStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/value_weight_view_product"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/value_setupDate_view_product"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:weightSum="2"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:layout_marginStart="5dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/txt_numOfDist_view_product"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/number_of_distributors"
                android:textSize="16sp"
                android:textColor="@color/yellow"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_quantity_view_product"
                android:layout_width="0dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quantity"
                android:textColor="@color/yellow"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:paddingStart="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/value_numOfDist_view_product"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/value_quantity_view_product"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14sp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="150dp">

        </View>

        <Button
            android:id="@+id/BTN_check_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/check_quantity"
            android:background="@drawable/field_design_yellow"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_photo"
            android:textColor="@color/yellow"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:id="@+id/img_View_Product"
            android:layout_width="230dp"
            android:layout_height="150dp"
            android:background="@drawable/ic_launcher_background"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal" />


    </LinearLayout>

</ScrollView>