<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.personnel.InfoPersonnelFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/tab_circle_blue"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/info"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:drawablePadding="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="10"
        android:layout_marginStart="5dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_img_info_personnel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:background="@mipmap/download"/>

        <TextView
            android:id="@+id/user_name_info_personnel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="9"
            android:hint="@string/user_name"
            android:paddingTop="10dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:background="@drawable/edite_text_strok"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/agent_info"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            />

    </FrameLayout>
</LinearLayout>